<resources>
    <string name="app_name">Skill Swap</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_skill_title">Skill</string>
    <string name="prompt_req_title">Requirement</string>
    <string name="prompt_password">Password</string>
    <string name="level">Choose level</string>
    <string name="experience">Choose period</string>
    <string name="hintExperience">Your experience</string>
    <string name="hintLevel">Your level</string>
    <string name="confirmation">Password confirmation</string>
    <string name="enter_description">Description</string>
    <string name="action_Register">Add</string>
    <string name="action_Edit">Edit</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="comrade">Search comrade</string>
    <string name="addBtn">+ Add</string>
    <string name="skills">Skills</string>
    <string name="Requirements">requirements</string>

    <string name="server_client_id">450289473746-62pu6orgg63g8s8ipr18imiosull2js6.apps.googleusercontent.com</string>
    <string name="enter_price">price</string>
</resources>